-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8, 11, 13, 15, 16, 17
-
Component/s: hotspot
-
b14
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8263741 | 11.0.12-oracle | Dukebot | P4 | Resolved | Fixed | b01 |
| JDK-8264351 | 11.0.12 | Aleksey Shipilev | P4 | Resolved | Fixed | b01 |
| JDK-8265637 | openjdk8u302 | Aleksey Shipilev | P4 | Resolved | Fixed | b01 |
SonarCloud reports:
2 uninitialized fields at the end of the constructor calls
class OutputMachOpcodes : public OutputMap {
int begin_inst_chain_rule;
int end_inst_chain_rule;
int begin_rematerialize;
int end_rematerialize;
int end_instructions;
public:
OutputMachOpcodes(FILE *hpp, FILE *cpp, FormDict &globals, ArchDesc &AD)
: OutputMap(hpp, cpp, globals, AD, "MachOpcodes"),
begin_inst_chain_rule(-1), end_inst_chain_rule(-1), end_instructions(-1)
They are written on all paths that I can see, but they should be initialized anyway, at least for proper checks in closing().
2 uninitialized fields at the end of the constructor calls
class OutputMachOpcodes : public OutputMap {
int begin_inst_chain_rule;
int end_inst_chain_rule;
int begin_rematerialize;
int end_rematerialize;
int end_instructions;
public:
OutputMachOpcodes(FILE *hpp, FILE *cpp, FormDict &globals, ArchDesc &AD)
: OutputMap(hpp, cpp, globals, AD, "MachOpcodes"),
begin_inst_chain_rule(-1), end_inst_chain_rule(-1), end_instructions(-1)
They are written on all paths that I can see, but they should be initialized anyway, at least for proper checks in closing().
- backported by
-
JDK-8263741 Some OutputMachOpcodes fields are uninitialized
-
- Resolved
-
-
JDK-8264351 Some OutputMachOpcodes fields are uninitialized
-
- Resolved
-
-
JDK-8265637 Some OutputMachOpcodes fields are uninitialized
-
- Resolved
-