8263504: Some OutputMachOpcodes fields are uninitialized

Reviewed-by: kvn